WIP on compilation workflow, update CI caching

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,12 @@
 image: fpco/stack-build:lts-11.6
 
+variables:
+  STACK_ROOT: .stack
+
 cache:
   paths:
     - .stack-work
+    - .stack
 
 build:
   script:
