--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,10 +9,12 @@ cache:
     - .stack
 
 build:
+  stage: build
   script:
      - stack build
 
 test:
+  stage: test
   script:
      - stack test
 
