WIP on AVL tree tests

--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ allprojects {
         repositories {
             mavenCentral()
             jcenter()
+            maven { url 'http://dl.bintray.com/kotlin/kotlin-eap' }
         }
         dependencies {
             classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
