--- a/ceres-base/build.gradle
+++ b/ceres-base/build.gradle
@@ -1,23 +1,32 @@
-plugins {
-    id 'kotlin-platform-common' version '1.2.61'
-}
+apply plugin: 'kotlin-platform-common'
 
 group 'regen-network'
 version '1.0-SNAPSHOT'
 
-repositories {
-    mavenCentral()
-}
-test {
-    useJUnitPlatform()
+kotlin {
+    experimental {
+        coroutines 'enable'
+    }
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-common"
-    testCompile "org.jetbrains.kotlin:kotlin-test-annotations-common"
-    testCompile "org.jetbrains.kotlin:kotlin-test-common"
-    testCompile 'io.kotlintest:kotlintest-runner-junit5:3.1.7'
-
+    compile "org.jetbrains.kotlin:kotlin-stdlib-common:$kotlin_version"
+    testCompile "org.jetbrains.kotlin:kotlin-test-common:$kotlin_version"
+    testCompile "org.jetbrains.kotlin:kotlin-test-annotations-common:$kotlin_version"
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+}
+repositories {
+    mavenCentral()
+}
+compileKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
+compileTestKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 }
 
 
