--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 allprojects {
     buildscript {
-        ext.kotlin_version = '1.2.61'
+        ext.kotlin_version = '1.3-M1'
 
         repositories {
             mavenCentral()
@@ -15,5 +15,6 @@ allprojects {
     repositories {
         mavenCentral()
         jcenter()
+        maven { url 'http://dl.bintray.com/kotlin/kotlin-eap' }
     }
 }
