--- a/ceres-base/build.gradle
+++ b/ceres-base/build.gradle
@@ -3,30 +3,12 @@ apply plugin: 'kotlin-platform-common'
 group 'regen-network'
 version '1.0-SNAPSHOT'
 
-kotlin {
-    experimental {
-        coroutines 'enable'
-    }
-}
-
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-common:$kotlin_version"
-    testCompile "org.jetbrains.kotlin:kotlin-test-common:$kotlin_version"
-    testCompile "org.jetbrains.kotlin:kotlin-test-annotations-common:$kotlin_version"
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-}
-repositories {
-    mavenCentral()
-}
-compileKotlin {
-    kotlinOptions {
-        jvmTarget = "1.8"
-    }
-}
-compileTestKotlin {
-    kotlinOptions {
-        jvmTarget = "1.8"
-    }
+    compile "org.jetbrains.kotlin:kotlin-stdlib-common"
+    testCompile "org.jetbrains.kotlin:kotlin-test-annotations-common"
+    testCompile "org.jetbrains.kotlin:kotlin-test-common"
+    testCompile 'io.kotlintest:kotlintest-runner-junit5:3.1.7'
+
 }
 
 
