--- a/settings.gradle
+++ b/settings.gradle
@@ -6,6 +6,15 @@ pluginManagement {
             }
         }
     }
+    repositories {
+        maven {
+            url 'http://dl.bintray.com/kotlin/kotlin-eap'
+        }
+        mavenCentral()
+        maven {
+            url 'https://plugins.gradle.org/m2/'
+        }
+    }
 }
 rootProject.name = 'regen-network'
 
