--- a/settings.gradle
+++ b/settings.gradle
@@ -14,9 +14,18 @@ pluginManagement {
         maven {
             url 'https://plugins.gradle.org/m2/'
         }
+
+        maven {
+            url 'http://dl.bintray.com/kotlin/kotlin-eap'
+        }
+
+        maven {
+            url 'https://plugins.gradle.org/m2/'
+        }
     }
 }
 rootProject.name = 'regen-network'
 
 include 'ceres-base'
 include 'ceres-base-jvm'
+include 'ceres-jvm'
