Setup basic Tendermint ABCI handlers, WIP on graph & geo types

--- a/ceres-jvm/build.gradle
+++ b/ceres-jvm/build.gradle
@@ -3,6 +3,8 @@ apply plugin: 'kotlin'
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     compile "org.rocksdb:rocksdbjni:5.5.1"
+    compile project(":ceres-base")
+    compile project(":ceres-base-jvm")
 }
 
 compileKotlin {
