--- a/settings.gradle
+++ b/settings.gradle
@@ -22,6 +22,14 @@ pluginManagement {
         maven {
             url 'https://plugins.gradle.org/m2/'
         }
+
+        maven {
+            url 'http://dl.bintray.com/kotlin/kotlin-eap'
+        }
+
+        maven {
+            url 'https://plugins.gradle.org/m2/'
+        }
     }
 }
 rootProject.name = 'regen-network'
@@ -29,3 +37,4 @@ rootProject.name = 'regen-network'
 include 'ceres-base'
 include 'ceres-base-jvm'
 include 'ceres-jvm'
+include 'regen-ledger'
