--- a/build.gradle
+++ b/build.gradle
@@ -16,5 +16,6 @@ allprojects {
         mavenCentral()
         jcenter()
         maven { url 'http://dl.bintray.com/kotlin/kotlin-eap' }
+        maven { url "https://dl.bintray.com/kotlin/ktor" }
     }
 }
