--- a/regen-ledger/build.gradle
+++ b/regen-ledger/build.gradle
@@ -7,7 +7,8 @@ repositories {
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     compile "com.github.jtendermint:jabci:0.20.0.1"
     compile "com.xenomachina:kotlin-argparser:2.0.7"
     compile project(":ceres-base")
