--- a/ceres-xtext/build.gradle
+++ b/ceres-xtext/build.gradle
@@ -1,3 +1,7 @@
+apply plugin: 'java'
+apply plugin: 'kotlin'
+apply plugin: 'org.xtext.xtend'
+
 dependencies {
 	compile "org.eclipse.xtext:org.eclipse.xtext:${xtextVersion}"
 	compile "org.eclipse.xtext:org.eclipse.xtext.xbase:${xtextVersion}"
