--- a/settings.gradle
+++ b/settings.gradle
@@ -4,6 +4,10 @@ pluginManagement {
             if (requested.id.id == "kotlin-platform-common") {
                 useModule("org.jetbrains.kotlin:kotlin-gradle-plugin:${requested.version}")
             }
+
+            if (requested.id.id == "kotlin2js") {
+                useModule("org.jetbrains.kotlin:kotlin-gradle-plugin:${requested.version}")
+            }
         }
     }
     repositories {
@@ -11,6 +15,14 @@ pluginManagement {
             url 'http://dl.bintray.com/kotlin/kotlin-eap'
         }
         mavenCentral()
+        maven {
+            url 'https://plugins.gradle.org/m2/'
+        }
+
+        maven {
+            url 'http://dl.bintray.com/kotlin/kotlin-eap'
+        }
+
         maven {
             url 'https://plugins.gradle.org/m2/'
         }
@@ -38,3 +50,6 @@ include 'ceres-base'
 include 'ceres-base-jvm'
 include 'ceres-jvm'
 include 'regen-ledger'
+include 'ceres-js'
+include 'ceres-xtext'
+include 'ceres-xtext.ide'
