--- a/settings.gradle
+++ b/settings.gradle
@@ -51,5 +51,5 @@ include 'ceres-base-jvm'
 include 'ceres-jvm'
 include 'regen-ledger'
 include 'ceres-js'
-include 'ceres-xtext'
-include 'ceres-xtext.ide'
+include 'ceres.xtext'
+include 'ceres.xtext.ide'
