Standalone ceres xtext parser is working, closes #3

--- a/ceres.xtext.ide/build.gradle
+++ b/ceres.xtext.ide/build.gradle
@@ -6,12 +6,7 @@ apply plugin: 'java'
 apply plugin: 'org.xtext.xtend'
 apply plugin: 'kotlin'
 
-sourceSets {
-	main {
-		java.srcDirs = ["src", "src-gen"]
-		xtendOutputDir = "xtend-gen"
-	}
-}
+apply from: "${rootDir}/gradle/source-layout.gradle"
 
 dependencies {
 	compile project(':ceres.xtext')
