WIP on Ceres type system and code generation

--- a/ceres.xtext.ide/build.gradle
+++ b/ceres.xtext.ide/build.gradle
@@ -12,6 +12,8 @@ dependencies {
 	compile project(':ceres.xtext')
 	compile "org.eclipse.xtext:org.eclipse.xtext.ide:${xtextVersion}"
 	compile "org.eclipse.xtext:org.eclipse.xtext.xbase.ide:${xtextVersion}"
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 }
 
 apply plugin: 'application'
