--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 allprojects {
     buildscript {
-        ext.kotlin_version = '1.3-M2'
+        ext.kotlin_version = '1.3.0'
 	    ext.xtextVersion = '2.14.0'
 
         repositories {
