--- a/ceres-js/build.gradle
+++ b/ceres-js/build.gradle
@@ -1,16 +1,46 @@
+apply plugin: 'kotlin2js'
 
-plugins {
-    id 'kotlin2js' version '1.3-M1'
-}
-
-version 'unspecified'
-
-repositories {
-    maven {     url 'http://dl.bintray.com/kotlin/kotlin-eap' }
-    mavenCentral()
+buildscript {
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-frontend-plugin:0.0.37"
+    }
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-js"
-    testCompile "org.jetbrains.kotlin:kotlin-test-js"
+    compile "org.jetbrains.kotlin:kotlin-stdlib-js:$kotlin_version"
+    compile 'org.jetbrains:kotlin-react:16.4.2-pre.50-kotlin-1.2.61'
+    compile 'org.jetbrains:kotlin-react-dom:16.4.2-pre.50-kotlin-1.2.61'
+    compile 'org.jetbrains:kotlin-styled:1.0.0-pre.50-kotlin-1.2.61'
+    testCompile "org.jetbrains.kotlin:kotlin-test-js:$kotlin_version"
+}
+
+apply plugin: 'org.jetbrains.kotlin.frontend'
+
+compileKotlin2Js {
+    kotlinOptions.metaInfo = true
+    kotlinOptions.outputFile = "$project.buildDir.path/js/${project.name}.js"
+    kotlinOptions.sourceMap = true
+    kotlinOptions.moduleKind = 'commonjs'
+    kotlinOptions.main = "call"
+}
+
+kotlinFrontend {
+    npm {
+        dependency("react")
+        dependency("react-dom")
+    }
+    webpackBundle {
+        bundleName = "main"
+        sourceMapEnabled = true
+        contentPath = file('src/main/web')
+        publicPath = "/"
+        port = 3002
+    }
+}
+
+
+repositories {
+    maven {
+        url "https://dl.bintray.com/kotlin/kotlin-js-wrappers"
+    }
 }
