--- a/ceres-jvm/build.gradle
+++ b/ceres-jvm/build.gradle
@@ -17,7 +17,7 @@ dependencies {
     compile "ch.qos.logback:logback-classic:1.2.1"
     compile project(":ceres-base")
     compile project(":ceres-base-jvm")
-    compile project(":ceres.xtext")
+//    compile project(":ceres.xtext")
 }
 
 compileKotlin {
