--- a/ceres-jvm/build.gradle
+++ b/ceres-jvm/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.github.johnrengelman.shadow' version '2.0.4'
 }
 apply plugin: 'kotlin'
+apply plugin: 'application'
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
@@ -15,6 +16,7 @@ dependencies {
     compile "com.xenomachina:kotlin-argparser:2.0.7"
     compile 'io.github.microutils:kotlin-logging:1.5.9'
     compile "ch.qos.logback:logback-classic:1.2.1"
+    compile "org.jline:jline:3.9.0"
     compile project(":ceres-base")
     compile project(":ceres-base-jvm")
 //    compile project(":ceres.xtext")
@@ -26,3 +28,9 @@ compileKotlin {
 compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
 }
+
+run{
+    standardInput = System.in
+}
+
+mainClassName = 'ceres.main.MainKt'
