Revisiting haskell impl

--- a/hs/package.yaml
+++ b/hs/package.yaml
@@ -6,9 +6,9 @@ author:              "Author name here"
 maintainer:          "example@example.com"
 copyright:           "2018 Author name here"
 
-extra-source-files:
-- README.md
-- ChangeLog.md
+# extra-source-files:
+# - README.md
+# - ChangeLog.md
 
 # Metadata used when publishing your package
 # synopsis:            Short description of your package
@@ -70,7 +70,7 @@ default-extensions:
   - MultiWayIf
 
 library:
-  source-dirs: hs
+  source-dirs: src
   ghc-options:
     - -Wall
     - -Wcompat
