--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -26,7 +26,7 @@
 
 [[constraint]]
   name = "github.com/cosmos/cosmos-sdk"
-  version = "v0.27.0"
+  branch = "develop"
 
 [[override]]
   name = "github.com/golang/protobuf"
