--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -40,6 +40,10 @@
   name = "github.com/spf13/viper"
   version = "~1.0.0"
 
+[[constraint]]
+  name = "github.com/satori/go.uuid"
+  version = "v1.2.0"
+
 [[override]]
   name = "github.com/tendermint/go-amino"
   version = "v0.14.1"
