--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -26,7 +26,7 @@
 
 [[constraint]]
   name = "github.com/cosmos/cosmos-sdk"
-  branch = "develop"
+  version = "v0.28.1"
 
 [[override]]
   name = "github.com/golang/protobuf"
@@ -54,7 +54,7 @@
 
 [[override]]
   name = "github.com/tendermint/tendermint"
-  version = "v0.27.0-dev1"
+  version = "v0.27.3"
 
 [[override]]
   name = "golang.org/x/crypto"
