--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -44,6 +44,10 @@
   name = "github.com/satori/go.uuid"
   version = "v1.2.0"
 
+[[constraint]]
+  name = "github.com/twpayne/go-geom"
+  version = "v1.0.1"
+
 [[override]]
   name = "github.com/tendermint/go-amino"
   version = "v0.14.1"
