--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .postgres
+.idea
 
 # Created by https://www.gitignore.io/api/go,vim,emacs,intellij
 # Edit at https://www.gitignore.io/?templates=go,vim,emacs,intellij
