--- a/contrib/images/rbuilder/Dockerfile
+++ b/contrib/images/rbuilder/Dockerfile
@@ -1,4 +1,4 @@
-FROM golang:1.15.0-buster
+FROM golang:1.15.2-alpine3.12
 ENV DEBIAN_FRONTEND=noninteractive
 RUN apt-get update && apt-get --no-install-recommends -y install \
     pciutils build-essential git wget \
@@ -9,10 +9,7 @@ RUN useradd -ms /bin/bash -U builder
 ARG APP
 ARG DEBUG
 ENV APP ${APP:-cosmos-sdk}
-ENV DEBUG ${DEBUG}
-ENV VERSION unknown
-ENV COMMIT unknown
-ENV LEDGER_ENABLE true
+ENV DEBUG ${DEBUG} VERSION unknown COMMIT unknown LEDGER_ENABLE true
 USER builder:builder
 WORKDIR /sources
 VOLUME [ "/sources" ]
