--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Tests
+name: Build
 
 on:
   pull_request:
@@ -6,10 +6,9 @@ on:
     branches:
       - master
 jobs:
-  tests:
-    name: Unit tests
+  build:
+    name: Build
     runs-on: ubuntu-latest
-    timeout-minutes: 6
     steps:
       - name: Install Go
         uses: actions/setup-go@v2.1.3
@@ -17,6 +16,6 @@ jobs:
           go-version: 1.15
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: run tests
-        run: make test
-      
+      - name: Display go version
+        run: go version
+      - run: make build
