--- a/buf.yaml
+++ b/buf.yaml
@@ -1,4 +1,3 @@
-version: v1beta1
 build:
   roots:
     - proto
@@ -13,6 +12,8 @@ lint:
   except:
     - SERVICE_SUFFIX
   ignore:
+    - cosmos
+    - ibc
     - tendermint
     - gogoproto
     - cosmos_proto
@@ -22,6 +23,7 @@ breaking:
   use:
     - FILE
   ignore:
+    - cosmos
     - tendermint
     - gogoproto
     - cosmos_proto
