--- a/.github/workflows/sims.yml
+++ b/.github/workflows/sims.yml
@@ -126,7 +126,7 @@ jobs:
           make sim-regen-after-import
         if: env.GIT_DIFF
 
-  test-regen-multi-seed-short:
+  test-regen-fullapp:
     runs-on: ubuntu-latest
     needs: [build, install-runsim]
     steps:
@@ -149,7 +149,7 @@ jobs:
           path: ~/go/bin
           key: ${{ runner.os }}-go-runsim-binary
         if: env.GIT_DIFF
-      - name: test-regen-multi-seed-short
+      - name: sim-test-fullapp
         run: |
-          make sim-regen-multi-seed-short
+          make sim-regen-fast
         if: env.GIT_DIFF
