--- a/.github/workflows/sims.yml
+++ b/.github/workflows/sims.yml
@@ -44,7 +44,7 @@ jobs:
           path: ~/go/bin
           key: ${{ runner.os }}-go-runsim-binary
 
-  sim-regen-nondeterminism:
+  sim-test-nondeterminism:
     runs-on: ubuntu-latest
     needs: [build, install-runsim]
     steps:
@@ -65,12 +65,12 @@ jobs:
           path: ~/go/bin
           key: ${{ runner.os }}-go-runsim-binary
         if: env.GIT_DIFF
-      - name: test-regen-nondeterminism
+      - name: test-test-nondeterminism
         run: |
           make sim-regen-nondeterminism
         if: env.GIT_DIFF
 
-  test-regen-import-export:
+  sim-test-import-export:
     runs-on: ubuntu-latest
     needs: [build, install-runsim]
     steps:
@@ -93,12 +93,12 @@ jobs:
           path: ~/go/bin
           key: ${{ runner.os }}-go-runsim-binary
         if: env.GIT_DIFF
-      - name: test-regen-import-export
+      - name: sim-test-import-export
         run: |
           make sim-regen-import-export
         if: env.GIT_DIFF
 
-  test-regen-after-import:
+  sim-test-after-import:
     runs-on: ubuntu-latest
     needs: [build, install-runsim]
     steps:
@@ -121,12 +121,12 @@ jobs:
           path: ~/go/bin
           key: ${{ runner.os }}-go-runsim-binary
         if: env.GIT_DIFF
-      - name: sim-regen-after-import
+      - name: sim-test-after-import
         run: |
           make sim-regen-after-import
         if: env.GIT_DIFF
 
-  test-regen-fullapp:
+  sim-test-fullapp:
     runs-on: ubuntu-latest
     needs: [build, install-runsim]
     steps:
