changes in goreleaser

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -110,5 +110,6 @@ nfpms:
 release:
   github:
     owner: regen-network
-    name: regen
+    name: regen-ledger
   prerelease: auto
+  draft: false
