--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -1,11 +1,10 @@
 name: Release
 # This workflow helps with creating releases.
 # This job will only be triggered when a tag (vX.X.x) is pushed
-on:
-  push:
+on: [push]
     # Sequence of patterns matched against refs/tags
-    tags:
-      - "v[0-9]+.[0-9]+.[0-9]+" # Push events to matching v*, i.e. v1.0, v20.15.10
+    # tags:
+    #   - "v[0-9]+.[0-9]+.[0-9]+" # Push events to matching v*, i.e. v1.0, v20.15.10
 
 jobs:
   release:
