--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -5,7 +5,8 @@ on: [push]
     # Sequence of patterns matched against refs/tags
     # tags:
     #   - "v[0-9]+.[0-9]+.[0-9]+" # Push events to matching v*, i.e. v1.0, v20.15.10
-
+run: |
+  sudo apt-get install gcc-multilib g++-multilib
 jobs:
   release:
     runs-on: ubuntu-latest
