--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -6,7 +6,8 @@ on: [push]
     # tags:
     #   - "v[0-9]+.[0-9]+.[0-9]+" # Push events to matching v*, i.e. v1.0, v20.15.10
 jobs:
-  run: sudo apt-get install gcc-multilib g++-multilib
+  run: |
+    sudo apt-get install gcc-multilib g++-multilib
   release:
     runs-on: ubuntu-latest
     steps:
