--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -6,11 +6,12 @@ on: [push]
     # tags:
     #   - "v[0-9]+.[0-9]+.[0-9]+" # Push events to matching v*, i.e. v1.0, v20.15.10
 jobs:
-  run: |
-    sudo apt-get install gcc-multilib g++-multilib
+  
   release:
     runs-on: ubuntu-latest
     steps:
+      - run: |
+          sudo apt-get install gcc-multilib g++-multilib
       - uses: actions/checkout@v2
       - name: Install Go
         uses: actions/setup-go@v2.1.3
