--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -23,3 +23,4 @@ jobs:
           args: release --rm-dist --release-notes ./RELEASE_CHANGELOG.md
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          # GPG_FINGERPRINT: ${{ steps.import_gpg.outputs.fingerprint }}
