--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -109,24 +109,24 @@ dockers:
     dockerfile: _build/Dockerfile.regen
     goos: linux
     goarch: amd64
-    image_templates:
-      - 'ghcr.io/regen-ledger/regen-network:{{if eq .Env.MAINNET "true"}}stable{{else}}latest{{end}}'
-      - 'ghcr.io/regen-ledger/regen-network:{{ .ShortCommit }}'
-      - 'ghcr.io/regen-ledger/regen-network:{{ .Version }}'
-brews:
-  - name: "{{ .Env.HOMEBREW_NAME }}"
-    tap:
-      owner: regen-ledger
-      name: homebrew-tap
-    homepage: "https://www.regen.network/"
-    description: "Blockchain-powered marketplace for climate solutions and planetary regenerations"
-    custom_block: |
-      {{ .Env.HOMEBREW_CUSTOM }}
-    install: |
-      bin.install "regen"
-signs:
-  - artifacts: checksum
-    args: ["--batch", "-u", "{{ .Env.GPG_FINGERPRINT }}", "--output", "${signature}", "--detach-sign", "${artifact}"]
+    # image_templates:
+    #   - 'ghcr.io/regen-ledger/regen-network:{{if eq .Env.MAINNET "true"}}stable{{else}}latest{{end}}'
+    #   - 'ghcr.io/regen-ledger/regen-network:{{ .ShortCommit }}'
+    #   - 'ghcr.io/regen-ledger/regen-network:{{ .Version }}'
+# brews:
+#   - name: "{{ .Env.HOMEBREW_NAME }}"
+#     tap:
+#       owner: regen-ledger
+#       name: homebrew-tap
+#     homepage: "https://www.regen.network/"
+#     description: "Blockchain-powered marketplace for climate solutions and planetary regenerations"
+#     custom_block: |
+#       {{ .Env.HOMEBREW_CUSTOM }}
+#     install: |
+#       bin.install "regen"
+# signs:
+#   - artifacts: checksum
+#     args: ["--batch", "-u", "{{ .Env.GPG_FINGERPRINT }}", "--output", "${signature}", "--detach-sign", "${artifact}"]
 
 nfpms:
   - vendor: "Regen Network Development Inc."
