--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           go-version: 1.15
       -
-        name: Run GoReleaser
+        name: Create GoReleaser
         uses: goreleaser/goreleaser-action@v2
         with:
           version: latest
