--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,8 +1,10 @@
 env:
   - GO111MODULE=on
   - CGO_ENABLED=1
+  # - LD_FLAGS=
+  # - BUILD_FLAGS=
   - LD_FLAGS= -s -w -X github.com/cosmos/cosmos-sdk/version.Name=regen -X github.com/cosmos/cosmos-sdk/version.AppName=regen -X github.com/cosmos/cosmos-sdk/version.Version=v1.0.3-1-g8bc6482 -X github.com/cosmos/cosmos-sdk/version.Commit=8bc6482b6f2eb1e5ce1b0dba1b45b992a134c919 -X "github.com/cosmos/cosmos-sdk/version.BuildTags=netgo,ledger" -trimpath
-  - BUILD_FLAGS=-tags "netgo ledger" -ldflags '-X github.com/cosmos/cosmos-sdk/version.Name=regen -X github.com/cosmos/cosmos-sdk/version.AppName=regen -X github.com/cosmos/cosmos-sdk/version.Version=v1.0.3-1-g8bc6482 -X github.com/cosmos/cosmos-sdk/version.Commit=8bc6482b6f2eb1e5ce1b0dba1b45b992a134c919 -X "github.com/cosmos/cosmos-sdk/version.BuildTags=netgo,ledger" -w -s' -trimpath
+  - BUILD_FLAGS=-tags "netgo,ledger" -ldflags '-X github.com/cosmos/cosmos-sdk/version.Name=regen -X github.com/cosmos/cosmos-sdk/version.AppName=regen -X github.com/cosmos/cosmos-sdk/version.Version=v1.0.3-1-g8bc6482 -X github.com/cosmos/cosmos-sdk/version.Commit=8bc6482b6f2eb1e5ce1b0dba1b45b992a134c919 -X "github.com/cosmos/cosmos-sdk/version.BuildTags=netgo,ledger" -w -s' -trimpath
 builds:
   - id: regen-darwin-amd64
     binary: regen
@@ -17,9 +19,9 @@ builds:
     flags:
       - -trimpath
       - -mod=readonly
-      - "{{ .BUILD_FLAGS }}"
+      - "{{ .Env.BUILD_FLAGS }}"
     ldflags:
-      - "{{ .LD_FLAGS }}"
+      - "{{ .Env.LD_FLAGS }}"
   - id: regen-linux-amd64
     binary: regen
     main: ./app/regen
